[package]
name = "memflow-linux"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
memflow = { git = "https://github.com/memflow/memflow.git", branch = "next" }
#reflow = { git = "https://github.com/memflow/reflow.git" }
reflow = { path = "../reflow" }
#memflow = { path = "../memflow3/memflow/memflow" }
log = "0.4"
dataview = "0.1.1"
goblin = "0.3"

[dev_dependencies]
simple_logger = "1.6"
